Make button full width

--- a/src/webview.html
+++ b/src/webview.html
@@ -53,6 +53,7 @@
             cursor: pointer;
         }
         button {
+            width: 100%;
             padding: 8px 16px;
             background-color: var(--vscode-button-background);
             color: var(--vscode-button-foreground);
