Make it possible to submit using shift-enter

--- a/src/webview.html
+++ b/src/webview.html
@@ -90,6 +90,13 @@
             });
         });
 
+        instructionTextarea.addEventListener('keydown', (event) => {
+            if (event.shiftKey && event.key === 'Enter') {
+                event.preventDefault();
+                applyChanges();
+            }
+        });
+
         window.addEventListener('message', event => {
             const message = event.data;
             switch (message.type) {
