--- a/src/webview.html
+++ b/src/webview.html
@@ -63,38 +63,39 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            position: relative;
+            margin-top: 10px;
         }
         button:hover {
             background-color: var(--vscode-button-hoverBackground);
         }
-        button.loading {
-            cursor: not-allowed;
+        button:disabled {
             opacity: 0.7;
+            cursor: not-allowed;
         }
-        button.loading .spinner {
-            display: inline-block;
+        .loading-indicator {
+            display: none;
+            text-align: center;
+            margin-top: 10px;
+            font-style: italic;
+            color: var(--vscode-descriptionForeground);
+        }
+        .loading-indicator.visible {
+            display: block;
         }
         .spinner {
-            display: none;
-            position: absolute;
-            right: 16px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 20px;
-            height: 20px;
-            border: 2px solid transparent;
-            border-top-color: var(--vscode-button-foreground);
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            border: 2px solid var(--vscode-descriptionForeground);
+            border-top-color: transparent;
             border-radius: 50%;
             animation: spin 1s linear infinite;
+            margin-right: 8px;
+            vertical-align: middle;
         }
         @keyframes spin {
-            from {
-                transform: rotate(0deg);
-            }
-            to {
-                transform: rotate(360deg);
-            }
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
         }
     </style>
 </head>
@@ -105,15 +106,19 @@
     <h3>Instruction</h3>
     <textarea id="instruction" rows="4" placeholder="Enter instructions here..."></textarea>
 
-    <button id="applyButton" onclick="applyChanges()">Apply
+    <button id="applyButton" onclick="applyChanges()">Apply</button>
+
+    <div id="loadingIndicator" class="loading-indicator">
         <div class="spinner"></div>
-    </button>
+        <span>Processing...</span>
+    </div>
 
     <script>
         const vscode = acquireVsCodeApi();
         const instructionTextarea = document.getElementById('instruction');
         const fileList = document.getElementById('fileList');
         const applyButton = document.getElementById('applyButton');
+        const loadingIndicator = document.getElementById('loadingIndicator');
 
         instructionTextarea.addEventListener('input', () => {
             const state = vscode.getState() || {};
@@ -192,15 +197,8 @@
         }
 
         function setLoadingState(isLoading) {
-            if (isLoading) {
-                applyButton.classList.add('loading');
-                applyButton.disabled = true;
-                applyButton.querySelector('.spinner').style.display = 'inline-block';
-            } else {
-                applyButton.classList.remove('loading');
-                applyButton.disabled = false;
-                applyButton.querySelector('.spinner').style.display = 'none';
-            }
+            applyButton.disabled = isLoading;
+            loadingIndicator.classList.toggle('visible', isLoading);
         }
 
         // Restore state when the webview is reloaded
