Change to ctrl from shift

--- a/src/webview.html
+++ b/src/webview.html
@@ -132,7 +132,7 @@
         });
 
         instructionTextarea.addEventListener('keydown', (event) => {
-            if (event.shiftKey && event.key === 'Enter') {
+            if (event.ctrlKey && event.key === 'Enter') {
                 event.preventDefault();
                 applyChanges();
             }
